# presswerk

./: .editorconfig  .gitignore  .gitlab-ci.yml  0-AI-MANIFEST.a2ml  ABI-FFI-README.md  AI.a2ml  AI.djot  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Dioxus.toml  LICENSE  MAINTAINERS.adoc  README.adoc  README.md  ROADMAP.adoc  RSR_OUTLINE.adoc  SECURITY.md  TOPOLOGY.md  justfile
.bot_directives/: README.scm  echidnabot.scm  finishbot.scm  glambot.scm  rhodibot.scm  robot-repo-automaton.scm  seambot.scm  sustainabot.scm
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  question.md
.github/workflows/: bench.yml  ci.yml  codeql.yml  guix-nix-policy.yml  hypatia-scan.yml  jekyll-gh-pages.yml  jekyll.yml  mirror.yml  npm-bun-blocker.yml  quality.yml  release.yml  rsr-antipattern.yml  scorecard-enforcer.yml  scorecard.yml  secret-scanner.yml  security-policy.yml  security.yml  ts-blocker.yml  wellknown-enforcement.yml  workflow-linter.yml
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
contractiles/: README.adoc
contractiles/dust/: Dustfile
contractiles/k9/: README.adoc  template-hunt.k9.ncl  template-kennel.k9.ncl  template-yard.k9.ncl
contractiles/k9/examples/: ci-config.k9.ncl  project-metadata.k9.ncl  setup-repo.k9.ncl
contractiles/lust/: Intentfile
contractiles/must/: Mustfile
contractiles/trust/: Trustfile.hs
crates/presswerk-app/: Cargo.toml
crates/presswerk-app/src/: main.rs  state.rs
crates/presswerk-app/src/pages/: add_printer.rs  audit.rs  doctor.rs  easy_jobs.rs  easy_print.rs  edit.rs  home.rs  jobs.rs  mod.rs  print.rs  scan.rs  server.rs  settings.rs  text_editor.rs
crates/presswerk-app/src/services/: app_services.rs  data_dir.rs  mod.rs
crates/presswerk-bridge/: Cargo.toml
crates/presswerk-bridge/src/: lib.rs  stub.rs  traits.rs
crates/presswerk-bridge/src/android/: mod.rs
crates/presswerk-bridge/src/ios/: mod.rs
crates/presswerk-core/: Cargo.toml
crates/presswerk-core/src/: config.rs  error.rs  human_errors.rs  lib.rs  types.rs
crates/presswerk-document/: Cargo.toml
crates/presswerk-document/benches/: document_bench.rs
crates/presswerk-document/src/: convert.rs  lib.rs
crates/presswerk-document/src/image/: mod.rs  processor.rs
crates/presswerk-document/src/pdf/: mod.rs  reader.rs  writer.rs
crates/presswerk-document/src/scan/: enhance.rs  mod.rs  ocr.rs
crates/presswerk-print/: Cargo.toml
crates/presswerk-print/benches/: ipp_bench.rs
crates/presswerk-print/src/: capabilities.rs  diagnostics.rs  discovery.rs  health.rs  ipp_client.rs  ipp_server.rs  lib.rs  lpr_client.rs  protocol.rs  queue.rs  raw_client.rs  resilience.rs  retry.rs  revival.rs
crates/presswerk-security/: Cargo.toml
crates/presswerk-security/benches/: security_bench.rs
crates/presswerk-security/src/: audit.rs  certificates.rs  integrity.rs  lib.rs  storage.rs
docs/specifications/: PRINTER-SPECIFICATIONS.adoc
ffi/zig/: build.zig
ffi/zig/src/: main.zig
ffi/zig/test/: integration_test.zig
src/abi/: Bridge.idr  Encryption.idr  Foreign.idr  Layout.idr  Protocol.idr  Types.idr
