# SPDX-License-Identifier: PMPL-1.0-or-later
# Copyright (c) 2026 Jonathan D.A. Jewell (hyperpolymath) <jonathan.jewell@open.ac.uk>

[workspace]
resolver = "2"
members = [
    "crates/presswerk-core",
    "crates/presswerk-security",
    "crates/presswerk-document",
    "crates/presswerk-print",
    "crates/presswerk-bridge",
    "crates/presswerk-app",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>"]
license = "PMPL-1.0-or-later"
repository = "https://github.com/hyperpolymath/presswerk"

[workspace.dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Print protocol
ipp = { version = "5", features = ["async"] }
mdns-sd = "0.13"

# Document processing
lopdf = "0.38"
printpdf = "0.8"
image = "0.25"
imageproc = "0.25"

# OCR (optional — behind "ocr" feature gate)
ocrs = "0.12"
rten = "0.24"
rten-imageproc = "0.24"
rten-tensor = "0.24"

# Security
age = "0.11"
ring = "0.17"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"

# UI
dioxus = { version = "0.7", features = ["desktop", "router", "html", "hooks", "signals"] }
rfd = "0.17"

# Internal crates
presswerk-core = { path = "crates/presswerk-core" }
presswerk-security = { path = "crates/presswerk-security" }
presswerk-document = { path = "crates/presswerk-document" }
presswerk-print = { path = "crates/presswerk-print" }
presswerk-bridge = { path = "crates/presswerk-bridge" }
