# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "presswerk-core"
description = "Core types and errors for the Presswerk print router"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
