# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "presswerk-print"
description = "IPP client/server, mDNS discovery, and job queue for Presswerk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
presswerk-core = { workspace = true }
presswerk-security = { workspace = true }
ipp = { workspace = true }
mdns-sd = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
