# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "presswerk-security"
description = "Encrypted storage, audit trail, and TLS for Presswerk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
presswerk-core = { workspace = true }
age = { workspace = true }
ring = { workspace = true }
rustls = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "security_bench"
harness = false
